--- a/src/modules/attitude_estimator_so3_comp/README
+++ b/src/modules/attitude_estimator_so3_comp/README
@@ -1,5 +1,3 @@
 Synopsis
 
- nsh> attitude_estimator_so3_comp start -d /dev/ttyS1 -b 115200
-
-Option -d is for debugging packet. See code for detailed packet structure.
+ nsh> attitude_estimator_so3_comp start
